== 0.7.3

Improvements::

    * runtime: BLIT() function added
    * runtime: BLIT FREE instruction added
    * runtime: GET instruction added
    * runtime: PUT instruction added
    * compiler: add generic #fno syntax

Bug Fixes::

    * ide: fix cursor line in buf2line()
    * compiler: fix subprogram call error handling
    * compiler: fix record/class field memory offsets

== 0.7.2

Improvements::

    * documentation: full online documentation in amiga guide format
    * ide: make editor auto-formatting much less aggressive (respect user's whitespace and case choices)
    * runtime: ON MOUSE CALL instruction added
    * runtime: MOUSE ON|OFF instruction added
    * runtime: MOUSE() function added
    * runtime: ON MOUSE MOTION CALL instruction added
    * runtime: MOUSE MOTION ON|OFF instruction added

Bug Fixes::

    * ide: fix changed marker position
    * ide: keep DOS Output() when executing program from within IDE
    * ide: fix line length check on cursor up/down
    * ide: fix vertical scroll area
    * ide: fix run memleak
    * ide: fix UI slowdown bug (added proper Begin/EndRefresh calls)
    * compiler: fix EOL token leak, REM comment processing

== 0.7.1alpha1

Improvements::

    * runtime/ide: detect and handle CTRL-C breaks
    * ide: handle workbench startup + argument
    * ide: create icons for source code files and binaries
    * compiler/runtime: String concatenation implemented
    * compiler: SLEEP FOR statement added
    * runtime: workbench startup code added
    * runtime: auto-open WINDOW 1 on first text output in debug/worbench startup mode

Bug Fixes::

    * compiler: CLI return code fixed
    * compiler: handle varPtr in BinOp expressions
    * compiler: reset compiler options on each compiler run
    * ide: do not crash if non-existing file is specified as cmd line argument
    * ide: fix refresh while program is running
    * runtime: fix _aqb shutdown crash
    * runtime: fix INKEY buffer handling