@@ -2,6 +2,7 @@
 
 Improvements::
 
+    * ide/runtime: handle and display program exit ERR code
     * runtime: BLIT() function added
     * runtime: BLIT FREE instruction added
     * runtime: GET instruction added
